# adaptive-prediction

./: .gitignore  .gitmodules  CITATIONS.bib  CONTRIBUTING.md  README.md  pyproject.toml  requirements.txt  setup.cfg  train_unified.py
config/: nuScenes.json  nuScenes_state_delta.json  pedestrians.json
experiments/: Plots.ipynb
experiments/nuScenes/: full_per_agent_eval.py  full_uncorrelated_eval.py  nuScenes-Lyft Qualitative.ipynb  nuScenes-Lyft Quantitative.ipynb  preprocess_challenge_splits.py
experiments/nuScenes/models/lyft_mm_base_tpp-11_Sep_2022_18_56_49/: config.json
experiments/nuScenes/models/nusc_mm_base_tpp-11_Sep_2022_19_15_45/: config.json
experiments/nuScenes/models/nusc_mm_k0_tpp-12_Sep_2022_00_40_16/: config.json
experiments/nuScenes/models/nusc_mm_sec4_tpp-13_Sep_2022_11_06_01/: config.json
experiments/pedestrians/: Peds Adaptive.ipynb  train_1mode_models.sh
src/trajectron/: __init__.py  argument_parser.py
src/trajectron/environment/: __init__.py  data_structures.py  data_utils.py  environment.py  map.py  node.py  node_type.py  scene.py  scene_graph.py
src/trajectron/evaluation/: __init__.py  evaluation.py
src/trajectron/model/: __init__.py  mgcvae.py  model_registrar.py  model_utils.py  trajectron.py
src/trajectron/utils/: __init__.py  comm.py  distribution_utils.py  matrix_utils.py  os_utils.py  trajectory_utils.py
src/trajectron/visualization/: __init__.py  visualization.py  visualization_utils.py
tests/: test_cholesky.py  test_data_structures.py  test_gmm2d.py  test_matrix_utils.py
(+64 files in other folders)
