[metadata]
name = trajectron
version = 1.0.0
author = Boris Ivanovic
author_email = bivanovic@nvidia.com
description = The Trajectron++ multi-agent behavior prediction model.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.8

[options.packages.find]
where = src
